update Jules timeline

--- a/jules-timeline/index.html
+++ b/jules-timeline/index.html
@@ -31,7 +31,7 @@
             </h2>
             <img class="img-responsive" src="img/jules-santa.jpg" />
             <ul>
-              <li>milestone: <span class="answerspan">laughing and giggling at my parents all the time</span></li> <!-- we'll I'm here aren't I? -->
+              <li>milestone: <span class="answerspan">my first Christmas</span></li> <!-- we'll I'm here aren't I? -->
               <li>learning experience: <span class="answerspan">how to hold things in my hand</span></li>
               <li>can't get enough: <span class="answerspan">TV! (even though everyone's always trying to keep me away from it!)</span></li>
               <li>thankful for: <span class="answerspan">my bassinet, which vibrates!</span></li>
