brewing tour and homepage updates

--- a/brewing-tour/breweries.html
+++ b/brewing-tour/breweries.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>#beerwick</title>
+  <title>#beerwick breweries</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +22,8 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/custom.css">
 
-  <link href='https://fonts.googleapis.com/css?family=Gravitas+One|Kavoon' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+
   <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300' rel='stylesheet' type='text/css'>
 
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -30,23 +31,43 @@
 </head>
 <body>
 <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
-<div class="main-wrapper">
-  <h1 class="hero-title">A Brewing History of Bushwick</h1>
 
-  <img class="hero" src="img/william-ulmer-brewery.jpg" alt="photo">
+<div class="nav clearfix breweries">
+  <ul>
+    <li class="one"><a href="tour.html">tour info</a></li><!--
+ --><li class="two"><a href="map.html">map</a></li><!--
+ --><li class="three"><a href="images.html">images</a></li><!--
+ --><li class="four"><a href="history.html">history</a></li><!--
+ --><li class="five"><a href="breweries.html">breweries</a></li><!--
+ --><li class="six"><a href="about.html">about</a></li>
+    <hr class="breweries" />
+  </ul>
+</div>
 
-  <div class="nav-home">
-    <div class="nav main clearfix">
-      <ul>
-        <li class="one"><a href="tour.html">tour info</a></li><!--
-     --><li class="two"><a href="map.html">map</a></li><!--
-     --><li class="three"><a href="images.html">images</a></li><!--
-     --><li class="four"><a href="history.html">history</a></li><!--
-     --><li class="five"><a href="breweries.html">breweries</a></li><!--
-     --><li class="six"><a href="about.html">about</a></li>
-        <hr />
-      </ul>
-    </div>
+  <div class="header">
+    <h4><a href="index.html">A Brewing History of Bushwick&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;#beerwick</a></h4>
+    <h1>Breweries</h1>
+  </div>
+
+  <div class="wrapper">
+
+    <h2 class="subhead-top">Brewery Name Here</h2>
+
+    <img class="content" src="http://placehold.it/350x150" alt="photo">
+
+    <p>Hello.</p>
+    
+    <h2 class="subhead-text">Brewery Name Here</h2>
+
+    <img class="content" src="http://placehold.it/350x150" alt="photo">
+
+    <p>Hello.</p>
+
+  </div>
+
+  <div class="footer">
+    <hr class="footer-line" />
+    <p class="footer-text">Created by <a href="http://www.chrisheuberger.com" target="_blank">Chris Heuberger</a> ©2016&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/chrisbup/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/chrisbup" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;Thanks for visiting.</p>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
