--- a/brewing-tour/tour.html
+++ b/brewing-tour/tour.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>#beerwick</title>
+  <title>Bushwick Brewing Tour | #BBT</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta http-equiv="cleartype" content="on">
 
-  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
 
@@ -45,7 +45,7 @@
 </div>
 
   <div class="header">
-    <h4><a href="index.html">A Brewing History of Bushwick&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;#beerwick</a></h4>
+    <h4><a href="index.html">Bushwick Brewing Tour&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;#BBT</a></h4>
     <h1>Tour Info</h1>
     <img class="beers-pic" src="img/beers.png" alt="beer drawing">
     <img class="beers-pic-mobile" src="img/beers-mobile.png" alt="beer drawing">
@@ -59,7 +59,7 @@
 
     <div class="shim"></div>
 
-    <img class="content" src="img/pic3.jpg" alt="photo">
+    <img class="content" src="img/bbt-arion-hall.jpg" alt="photo">
 
     <h2 class="subhead-text">Schedule</h2>
 
@@ -71,20 +71,20 @@
 
     <h2 class="subhead-text">Tour Photos</h2>
 
-    <img class="tour-left" src="img/pic1.jpg" alt="photo">
-    <img class="tour-right" src="img/pic2.jpg" alt="photo">
-    <img class="tour-left" src="img/pic4.jpg" alt="photo">
-    <img class="tour-right" src="img/pic5.jpg" alt="photo">
-    <img class="tour-left" src="img/pic6.jpg" alt="photo">
-    <img class="tour-right" src="img/pic7.jpg" alt="photo">
-    <img class="tour-left" src="img/pic8.jpg" alt="photo">
-    <img class="tour-right" src="img/pic10.jpg" alt="photo">
+    <img class="tour-left" src="img/bbt-william-ulmer-office.jpg" alt="photo">
+    <img class="tour-right" src="img/bbt-huber-hittleman.jpg" alt="photo">
+    <img class="tour-left" src="img/bbt-talk.jpg" alt="photo">
+    <img class="tour-right" src="img/bbt-huber-hittleman-group.jpg" alt="photo">
+    <img class="tour-left" src="img/bbt-william-ulmer-brewery-corner.jpg" alt="photo">
+    <img class="tour-right" src="img/bbt-sidewalk.jpg" alt="photo">
+    <img class="tour-left" src="img/bbt-arion-hall-group.jpg" alt="photo">
+    <img class="tour-right" src="img/bbt-huber-hittleman-door.jpg" alt="photo">
 
   </div>
 
   <div class="footer">
     <hr class="footer-line" />
-    <p class="footer-text">Created by <a href="http://www.chrisheuberger.com" target="_blank">Chris Heuberger</a> ©2016&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/chrisbup/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/chrisbup" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;Thanks for visiting.</p>
+    <p class="footer-text">Created by <a href="http://www.chrisheuberger.com" target="_blank">Chris Heuberger</a> ©2016&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/chrisbup" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/chrisbup/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;<br class="rwd-break"/>Thanks for visiting. Be a nice person. Prost.</p>
   </div> 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
