--- a/brewing-tour/about.html
+++ b/brewing-tour/about.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>#beerwick About</title>
+  <title>Bushwick Brewing Tour | #BBT</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta http-equiv="cleartype" content="on">
 
-  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
 
@@ -45,7 +45,7 @@
 </div>
 
   <div class="header">
-    <h4><a href="index.html">A Brewing History of Bushwick&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;#beerwick</a></h4>
+    <h4><a href="index.html">Bushwick Brewing Tour&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;#BBT</a></h4>
     <h1>About</h1>
   </div>
 
@@ -69,7 +69,7 @@
 
   <div class="footer">
     <hr class="footer-line" />
-    <p class="footer-text">Created by <a href="http://www.chrisheuberger.com" target="_blank">Chris Heuberger</a> ©2016&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/chrisbup/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/chrisbup" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;Thanks for visiting.</p>
+    <p class="footer-text">Created by <a href="http://www.chrisheuberger.com" target="_blank">Chris Heuberger</a> ©2016&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/chrisbup" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/chrisbup/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;<br class="rwd-break"/>Thanks for visiting. Be a nice person. Prost.</p>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
