--- a/brewing-tour/index.html
+++ b/brewing-tour/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>#beerwick</title>
+  <title>Bushwick Brewing Tour | #BBT</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta http-equiv="cleartype" content="on">
 
-  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
 
@@ -31,9 +31,11 @@
 <body>
 <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
 <div class="main-wrapper">
-  <h1 class="hero-title">A Brewing History of Bushwick</h1>
 
-  <img class="hero" src="img/william-ulmer-brewery.jpg" alt="photo">
+  <div id="bg">
+    <h1 class="hero-title">A Brewing History of Bushwick</h1>
+    <img src="img/bbt-william-ulmer-brewery.jpg" alt="">
+  </div>
 
   <div class="nav-home">
     <div class="nav main clearfix">
