--- a/brewing-tour/map.html
+++ b/brewing-tour/map.html
@@ -37,7 +37,7 @@
     <li class="one"><a href="tour.html">tour info</a></li><!--
  --><li class="two"><a href="map.html">map</a></li><!--
  --><li class="three"><a href="images.html">images</a></li><!--
- --><li class="four"><a href="history.html">history</a></li><!--
+ --><li class="four"><a href="timeline.html">timeline</a></li><!--
  --><li class="five"><a href="breweries.html">breweries</a></li><!--
  --><li class="six"><a href="about.html">about</a></li>
     <hr class="map" />
