--- a/brewing-tour/timeline.html
+++ b/brewing-tour/timeline.html
@@ -32,30 +32,28 @@
 <body>
 <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
 
-<div class="nav clearfix history">
+<div class="nav clearfix">
   <ul>
     <li class="one"><a href="tour.html">tour info</a></li><!--
  --><li class="two"><a href="map.html">map</a></li><!--
  --><li class="three"><a href="images.html">images</a></li><!--
- --><li class="four"><a href="history.html">history</a></li><!--
+ --><li class="four"><a href="timeline.html">timeline</a></li><!--
  --><li class="five"><a href="breweries.html">breweries</a></li><!--
  --><li class="six"><a href="about.html">about</a></li>
-    <hr class="history" />
+    <hr class="timeline" />
   </ul>
 </div>
 
   <div class="header">
     <h4><a href="index.html">Bushwick Brewing Tour&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;#BBT</a></h4>
-    <h1>History</h1>
+    <h1>Timeline</h1>
   </div>
 
   <div class="wrapper">
 
-    <h2 class="subhead-top">Timeline</h2>
-
     <h3>1612</h3>
 
-    <p>Dutch explorer Adriaen Block, sailing on the Hudson River, builds some small log huts at the tip of Manhattan and starts brewing beer. The first European male to be born in New Amsterdamn, Jan Vigne, became a brewer.</p>
+    <p>Dutch explorer Adriaen Block, sailing on the Hudson River, builds some small log huts at the tip of Manhattan and starts brewing beer. The first European male to be born in New Amsterdamn, Jan Vigne, even became a brewer.</p>
 
     <h3>1661</h3>
 
@@ -67,7 +65,7 @@
 
     <h3>1770s</h3>
 
-    <p>New York Town and Philadelphia were established as the colonial brewing centers.</p>
+    <p>New York Town and Philadelphia are established as colonial brewing centers.</p>
 
     <h3>1822</h3>
 
@@ -83,7 +81,7 @@
 
     <h3>1888</h3>
 
-    <p>The Industrial revolution brings a boom. By this time, 35 breweries are running in Brooklyn producing 1.1 million barrels of beer generating an estimated $8 million revenue annually. More than 2 dozen just in today&rsquo;s Bushwick.</p>
+    <p>The Industrial Revolution has energized Bushwick. By this time, 35 breweries are running in Brooklyn producing 1.1 million barrels of beer generating an estimated $8 million revenue annually. More than 2 dozen just in today&rsquo;s Bushwick.</p>
 
     <div class="shim"></div>
     
@@ -111,7 +109,7 @@
 
     <h3>1976</h3>
 
-    <p>Rheingold and Schaefer close. An end of an era.</p>
+    <p>Rheingold and Schaefer close. The end of an era.</p>
 
     <div class="shim"></div>
     
