--- a/brewing-tour/tour.html
+++ b/brewing-tour/tour.html
@@ -37,7 +37,7 @@
     <li class="one"><a href="tour.html">tour info</a></li><!--
  --><li class="two"><a href="map.html">map</a></li><!--
  --><li class="three"><a href="images.html">images</a></li><!--
- --><li class="four"><a href="history.html">history</a></li><!--
+ --><li class="four"><a href="timeline.html">timeline</a></li><!--
  --><li class="five"><a href="breweries.html">breweries</a></li><!--
  --><li class="six"><a href="about.html">about</a></li>
     <hr />
@@ -53,7 +53,7 @@
 
   <div class="wrapper">
 
-    <p><span class="drop">W</span>elcome to <strong>A Brewing History of Bushwick</strong>. Believe it or not, the neighborhood of Bushwick, Brooklyn was once the beer brewing center of America. On this walking tour, we'll look at some historic 19th-century landmark brewery buildings that are still standing. We'll also make our way to Brewer's Row recounting the stories of the breweries, the beer, and the people that made Bushwick a thriving brewing powerhouse.</p>
+    <p><span class="drop">W</span>elcome to <strong>A Brewing History of Bushwick</strong>. Believe it or not, the neighborhood of Bushwick, Brooklyn was once the beer brewing center of America. On this walking tour, we'll look at some historic 19th-century landmark brewery buildings that are still standing. We'll also make our way to <strong>Brewer's Row</strong>, recounting the stories of the breweries, the beer, and the people that made Bushwick a thriving brewing powerhouse.</p>
 
     <p>And of course, we'll end at a bar and enjoy a pint in the tradition of Bushwick's once and future glory! The vibe is very informal and audience participation is encouraged. So come curious and come thirsty!</p>
 
