--- a/brewing-tour/about.html
+++ b/brewing-tour/about.html
@@ -37,7 +37,7 @@
     <li class="one"><a href="tour.html">tour info</a></li><!--
  --><li class="two"><a href="map.html">map</a></li><!--
  --><li class="three"><a href="images.html">images</a></li><!--
- --><li class="four"><a href="history.html">history</a></li><!--
+ --><li class="four"><a href="timeline.html">timeline</a></li><!--
  --><li class="five"><a href="breweries.html">breweries</a></li><!--
  --><li class="six"><a href="about.html">about</a></li>
     <hr class="about" />
@@ -63,7 +63,7 @@
 
     <h2 class="subhead-text">Take the Tour</h2>
     
-    <p>To register, you have to go through <a href="http://www.nych2o.org/" target="_blank">NYC H<sub>2</sub>0</a> or <a href="http://janeswalk.org/united-states/new-york-city-ny/brewing-history-bushwick/" target="_blank">Jane's Walks</a>. If you have any questions or comments at all, please <a href="mailto:chrisheuberg@gmail.com">email me.</a> Cheers!</p>
+    <p>To register, you have to go through <a href="http://www.nych2o.org/" target="_blank">NYC H<sub>2</sub>0</a> or <a href="http://janeswalk.org/united-states/new-york-city-ny/brewing-history-bushwick/" target="_blank">Jane's Walks</a>. If you have any questions or comments at all, please <a href="mailto:chrisheuberg@gmail.com">email me.</a> Thanks!</p>
 
   </div>
 
