--- a/brewing-tour/about.html
+++ b/brewing-tour/about.html
@@ -55,7 +55,7 @@
 
     <img class="left" src="img/chris-heuberger-pic.jpg" alt="photo">
 
-    <p>My name is Chris Heuberger and I'm a web developer and designer who's lived and worked in North Brooklyn since 2009. I heart New York, history, and beer and I'm always full of facts.</p>
+    <p>My name is Chris Heuberger and I'm a web developer and designer who's lived and worked in North Brooklyn since 2009. I heart New York, history, and beer — and I'm always full of facts.</p>
 
     <p>Everything in this tour is from my own research, as thorough as I can manage. Also note that I can sing the entire original <a href="https://www.youtube.com/watch?v=Ho2QTjp6xVs" target="_blank">Rheingold jingle</a> upon request.</p>
 
