--- a/brewing-tour/timeline.html
+++ b/brewing-tour/timeline.html
@@ -101,7 +101,7 @@
 
     <h3>1933</h3>
 
-    <p>The 21st Amendment repeals Prohibition. Breweries can finally start up production again&mdash;if they made it this long. Before Prohibition there were 23 breweries in Brooklyn but after repeal, just 9 reopened.</p>
+    <p>The 21st Amendment repeals Prohibition. Breweries can finally start up production again&mdash;if they made it this long. Before Prohibition, there were 23 breweries in Brooklyn but after repeal, just 9 reopened.</p>
 
     <h3>1949</h3>
 
