--- a/brewing-tour/tour.html
+++ b/brewing-tour/tour.html
@@ -65,7 +65,7 @@
 
     <p>This tour is run through <a href="http://www.nych2o.org/" target="_blank">NYC H<sub>2</sub>0</a>, an awesome non-profit that educates New Yorkers about water, ecology, and the natural history of New York City. The tour schedule is not fully established yet but once the weather gets nice, we hope to do it once a month.</p>
 
-    <p>Once a year, the tour is also part of <a href="http://janeswalk.org/united-states/new-york-city-ny/brewing-history-bushwick/" target="_blank">Jane's Walks</a>, a free event and annual weekend long festival of volunteer-led neighborhood walking tours. I'm going to give two Jane's Walks, both on <strong>Saturday May 7</strong>. One at <strong>1pm</strong> and one at <strong>5pm</strong>.</p>
+    <p>Once a year, the tour is also part of <a href="http://janeswalk.org/united-states/new-york-city-ny/brewing-history-bushwick/" target="_blank">Jane's Walks</a>, a free event and annual weekend long festival of volunteer-led neighborhood walking tours. I'm going to give two Jane's Walks, both on <strong>Saturday May 7, 2016</strong>. One at <strong>1pm</strong> and one at <strong>5pm</strong>.</p>
 
     <p>If you haven't already, check out those sites for how to sign up.</p>
 
