brewing tour style edits, alt tags

--- a/brewing-tour/index.html
+++ b/brewing-tour/index.html
@@ -34,7 +34,7 @@
 
   <div id="bg">
     <h1 class="hero-title">A Brewing History of Bushwick</h1>
-    <img src="img/bbt-william-ulmer-brewery.jpg" alt="">
+    <img src="img/bbt-william-ulmer-brewery.jpg" alt="William Ulmer Brewery">
   </div>
 
   <div class="nav-home">
