--- a/brewing-tour/tour.html
+++ b/brewing-tour/tour.html
@@ -53,32 +53,32 @@
 
   <div class="wrapper">
 
-    <p><span class="drop">W</span>elcome to <strong>A Brewing History of Bushwick</strong>. Believe it or not, the neighborhood of Bushwick, Brooklyn was once the beer brewing center of America. On this walking tour, we'll look at some historic 19th-century landmark brewery buildings that are still standing. We'll also make our way to <strong>Brewer's Row</strong>, recounting the stories of the breweries, the beer, and the people that made Bushwick a thriving brewing powerhouse.</p>
+    <p><span class="drop">W</span>elcome to <strong>A Brewing History of Bushwick</strong>. Believe it or not, the neighborhood of Bushwick, Brooklyn was once the beer brewing center of America. On this walking tour, we’ll look at some historic 19th-century landmark brewery buildings that are still standing. We’ll also make our way to <strong>Brewer’s Row</strong>, recounting the stories of the breweries, the beer, and the people that made Bushwick a thriving brewing powerhouse.</p>
 
-    <p>And of course, we'll end at a bar and enjoy a pint in the tradition of Bushwick's once and future glory! The vibe is very informal and audience participation is encouraged. So come curious and come thirsty!</p>
+    <p>And of course, we’ll end at a bar and enjoy a pint in the tradition of Bushwick’s once and future glory! The vibe is very informal and audience participation is encouraged. So come curious and come thirsty!</p>
 
     <div class="shim"></div>
 
-    <img class="content" src="img/bbt-arion-hall.jpg" alt="photo">
+    <img class="content" src="img/bbt-arion-hall.jpg" alt="Arion Hall">
 
     <h2 class="subhead-text">Schedule</h2>
 
     <p>This tour is run through <a href="http://www.nych2o.org/" target="_blank">NYC H<sub>2</sub>0</a>, an awesome non-profit that educates New Yorkers about water, ecology, and the natural history of New York City. The tour schedule is not fully established yet but once the weather gets nice, we hope to do it once a month.</p>
 
-    <p>Once a year, the tour is also part of <a href="http://janeswalk.org/united-states/new-york-city-ny/brewing-history-bushwick/" target="_blank">Jane's Walks</a>, a free event and annual weekend long festival of volunteer-led neighborhood walking tours. I'm going to give two Jane's Walks, both on <strong>Saturday May 7, 2016</strong>. One at <strong>1pm</strong> and one at <strong>5pm</strong>.</p>
+    <p>Once a year, the tour is also part of <a href="http://janeswalk.org/united-states/new-york-city-ny/brewing-history-bushwick/" target="_blank">Jane’s Walks</a>, a free event and annual weekend long festival of volunteer-led neighborhood walking tours. I’m going to give two Jane’s Walks, both on <strong>Saturday May 7, 2016</strong>. One at <strong>1pm</strong> and one at <strong>5pm</strong>.</p>
 
-    <p>If you haven't already, check out those sites for how to sign up.</p>
+    <p>If you haven’t already, check out those sites for how to sign up.</p>
 
     <h2 class="subhead-text">Tour Photos</h2>
 
-    <img class="tour-left" src="img/bbt-william-ulmer-office.jpg" alt="photo">
-    <img class="tour-right" src="img/bbt-huber-hittleman.jpg" alt="photo">
-    <img class="tour-left" src="img/bbt-talk.jpg" alt="photo">
-    <img class="tour-right" src="img/bbt-huber-hittleman-group.jpg" alt="photo">
-    <img class="tour-left" src="img/bbt-william-ulmer-brewery-corner.jpg" alt="photo">
-    <img class="tour-right" src="img/bbt-sidewalk.jpg" alt="photo">
-    <img class="tour-left" src="img/bbt-arion-hall-group.jpg" alt="photo">
-    <img class="tour-right" src="img/bbt-huber-hittleman-door.jpg" alt="photo">
+    <img class="tour-left" src="img/bbt-william-ulmer-office.jpg" alt="William Ulmer Office">
+    <img class="tour-right" src="img/bbt-huber-hittleman.jpg" alt="Huber Hittleman">
+    <img class="tour-left" src="img/bbt-talk.jpg" alt="talk">
+    <img class="tour-right" src="img/bbt-huber-hittleman-group.jpg" alt="Huber Hittleman Group">
+    <img class="tour-left" src="img/bbt-william-ulmer-brewery-corner.jpg" alt="William Ulmer Brewery Corner">
+    <img class="tour-right" src="img/bbt-sidewalk.jpg" alt="sidewalk">
+    <img class="tour-left" src="img/bbt-arion-hall-group.jpg" alt="Arion Hall Group">
+    <img class="tour-right" src="img/bbt-huber-hittleman-door.jpg" alt="Huber Hittleman Door">
 
   </div>
 
