--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -72,6 +72,10 @@
     <img class="content historical" src="img/Bushwick-beer-tavern-1895.jpg" alt="Bushwick beer tavern 1895">
     <p class="caption-title">Bushwick beer tavern 1895</p>
 
+    <img class="content historical" src="img/LanzerBrewery.jpg" alt="Lanzer Brewery">
+    <p class="caption-title">Lanzer Brewery</p>
+    <p class="caption-text">The Piel brothers start out by buying this brewery located on the corner of Liberty and Georgia. This photo is of the original Lanzer Brewery, before it was damaged extensively by fire in 1873. The Piel brothers would rebuild the brewery and open on May 24, 1883 (the same day the Brooklyn Bridge was opened). <em>Photo source: TJ Wiegand Collection</em></p>
+
     <img class="content historical" src="img/1909-New-York-Sun-brewery-ads.jpg" alt="1909 New York Sun brewery ads">
     <p class="caption-title">1909 New York Sun brewery ads</p>
     <p class="caption-text">Liebmann’s (Bushwick), Otto Huber (Bushwick), Ulmer (Bushwick), Trommer’s (Bushwick), Excelsior (Bushwick)</p>
@@ -144,6 +148,10 @@
     <img class="content historical" src="img/Trommers-Evergreen-Brewery-Restaurant-2.jpg" alt="Trommer’s Evergreen Brewery Restaurant">
     <p class="caption-title">Trommer’s Evergreen Brewery &amp; Restaurant</p>
     <p class="caption-text">Bushwick Avenue and Conway Street, Brooklyn</p>
+
+    <img class="content historical" src="img/Trommers-Maple-Garden.jpg" alt="Trommer’s Maple Garden">
+    <p class="caption-title">Trommer’s Maple Garden</p>
+    <p class="caption-text">This postcard shows one of the beer gardens that were popular in the early days: The Maple Garden at Trommer's Evergreen Brewery and Restaurant.</p>
     
     <img class="content historical" src="img/Trommers-Evergreen-Brewery-Restaurant-3.jpg" alt="Trommer’s Evergreen Brewery Restaurant">
     <p class="caption-title">Trommer’s Evergreen Brewery &amp; Restaurant</p>
