post-launch tweaks

--- a/brewing-tour/timeline.html
+++ b/brewing-tour/timeline.html
@@ -81,7 +81,7 @@
 
     <h3>1888</h3>
 
-    <p>The Industrial Revolution has energized Bushwick. By this time, 35 breweries are running in Brooklyn producing 1.1 million barrels of beer generating an estimated $8 million revenue annually. More than 2 dozen just in today&rsquo;s Bushwick.</p>
+    <p>The Industrial Revolution has energized Bushwick. By this time, at least 35 breweries are running in Brooklyn producing 1.1 million barrels of beer generating an estimated $8 million revenue annually. More than 2 dozen just in today&rsquo;s Bushwick.</p>
 
     <div class="shim"></div>
     
