--- a/brewing-tour/tour.html
+++ b/brewing-tour/tour.html
@@ -63,11 +63,11 @@
 
     <h2 class="subhead-text">Schedule</h2>
 
-    <p>This tour is run through <a href="http://www.nych2o.org/" target="_blank">NYC H<sub>2</sub>0</a>, an awesome non-profit that educates New Yorkers about water, ecology, and the natural history of New York City. The tour schedule is not fully established yet but once the weather gets nice, we hope to do it once a month.</p>
+    <p>This tour has been run through <a href="http://www.nych2o.org/" target="_blank">NYC H<sub>2</sub>0</a>, an awesome non-profit that educates New Yorkers about water, ecology, and the natural history of New York City. Although right now, we have no tours scheduled for the near future but...</p>
 
-    <p>Once a year, the tour is also part of <a href="http://janeswalk.org/united-states/new-york-city-ny/brewing-history-bushwick/" target="_blank">Jane’s Walks</a>, a free event and annual weekend long festival of volunteer-led neighborhood walking tours.</p>
+    <p>Once a year, it's also part of <a href="http://janeswalk.org/united-states/new-york-city-ny/brewing-history-bushwick/" target="_blank">Jane’s Walks</a>, a free event and annual weekend long festival every May of volunteer-led neighborhood walking tours.</p>
 
-    <p>If you haven’t already, check out those sites for how to sign up.</p>
+    <p>So mark your calendars for next year!</p>
 
     <h2 class="subhead-text">Tour Photos</h2>
 
