--- a/brewing-tour/about.html
+++ b/brewing-tour/about.html
@@ -63,7 +63,7 @@
 
     <h2 class="subhead-text">Take the Tour</h2>
     
-    <p>To register, you have to go through <a href="http://www.nych2o.org/" target="_blank">NYC H<sub>2</sub>0</a> or <a href="http://janeswalk.org/united-states/new-york-city-ny/brewing-history-bushwick/" target="_blank">Jane’s Walks</a>. If you have any questions or comments at all, please <a href="mailto:chrisheuberg@gmail.com">email me.</a> Thanks!</p>
+    <p>To register, you have to go through the <a href="http://janeswalk.org/united-states/new-york-city-ny/brewing-history-bushwick/" target="_blank">Jane’s Walks</a> website. If you have any questions or comments at all, please <a href="mailto:chrisheuberg@gmail.com">email me.</a> Thanks!</p>
 
   </div>
 
