--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -51,10 +51,6 @@
 
   <div class="wrapper">
 
-    <h2 class="subhead-top"><a href="https://flic.kr/s/aHska486ks" target="_blank">View on Flickr</a></h2>
-
-    <div class="shim"></div>
-
     <img class="content" src="img/Original-Dutch-Towns-of-Brooklyn.jpg" alt="Original Dutch Towns of Brooklyn">
     <p class="caption-title">Original Dutch Towns of Brooklyn</p>
 
@@ -210,7 +206,11 @@
     <img class="content historical" src="img/Chas-Schaefer-Corp-and-Otto-Huber-trucks.jpg" alt="Chas Schaefer Corp and Otto Huber trucks">
     <p class="caption-title">Chas. Schaefer Corp. and Otto Huber trucks</p>
 
-    <img class="content historical" src="img/Huber-Hittleman-Brewery-ad.jpg" alt="Huber Hittleman Brewery">
+    <img class="content historical" src="img/Huber-Hittleman-Brewery.jpg" alt="Huber Hittleman Brewery ad">
+    <p class="caption-title">Huber Hittleman Brewery ad</p>
+    <p class="caption-text">Meserole Street from Bushwick Avenue to Waterbury Street</p>
+
+    <img class="content historical" src="img/Huber-Hittleman-Brewery-ad.jpg" alt="Huber Hittleman Brewery ad">
     <p class="caption-title">Huber Hittleman Brewery ad</p>
     <p class="caption-text">Meserole Street from Bushwick Avenue to Waterbury Street</p>
 
@@ -223,7 +223,7 @@
     <img class="content historical" src="img/brewery-merch.jpg" alt="brewery merch">
     <p class="caption-title">Schafer and Rheingold merch!</p>
 
-    <h3><a href="#" class="scrollup">Top!</a></h3>
+    <h3><a href="#" class="scrollup"><i class="fa fa-arrow-up fa-3x" aria-hidden="true"></i></a></h3>
 
   </div>
 
