--- a/play.html
+++ b/play.html
@@ -30,198 +30,204 @@
 <body>
   <!--[if lt IE 7]>
     <p class="browsehappy">Uh-oh! Looks like you're using an <strong>outdated</strong> browser. You should definitely <a href="http://browsehappy.com/">upgrade</a>. May I suggest Google Chrome, Firefox or Safari?</p>
-  <![endif]-->
-  <div class="sidebar">
-    <a href="index.html">
-      <img class='logo' src="images/logo4.png">
-      <br>
-    </a>
-    <h3 class='nav name'>Chris Heuberger</h3>
-    <p class='nav title'>web developer + designer</p>
-    <ul class='nav-ul'>
-      <li><a class='nav' href="about.html">about</a></li>
-      <li><a class='nav' href="development.html">development</a></li>
-      <li><a class='nav' href="design.html">design</a></li>
-      <li><a class='nav' href="photo.html">photo</a></li>
-      <li><a class='nav current' href="play.html">play</a></li><br>
-      <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
-      <li><a class='nav' href='http://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
-      <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
-      <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
-      <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
-      <li><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
-      <li><a class='nav' href='mailto:chrisheuberg@gmail.com' title='chrisheuberg@gmail.com'>email</a></li>
-      <li><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></li>
-    </ul>
-  </div>
+    <![endif]-->
+    <div class="sidebar">
+      <a href="index.html">
+        <img class='logo' src="images/logo4.png">
+        <br>
+      </a>
+      <h3 class='nav name'>Chris Heuberger</h3>
+      <p class='nav title'>web developer + designer</p>
+      <ul class='nav-ul'>
+        <li><a class='nav' href="about.html">about</a></li>
+        <li><a class='nav' href="development.html">development</a></li>
+        <li><a class='nav' href="design.html">design</a></li>
+        <li><a class='nav' href="photo.html">photo</a></li>
+        <li><a class='nav current' href="play.html">play</a></li><br>
+        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank">GitHub</a></li>
+        <li><a class='nav' href='http://codepen.io/ChrisBup' target="_blank">CodePen</a></li>
+        <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank">Dribbble</a></li>
+        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank">LinkedIn</a></li>
+        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank">Twitter</a></li>
+        <li><a class='nav' href='http://instagram.com/chrisbup' target="_blank">Instagram</a></li><br>
+        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' title='chrisheuberg@gmail.com'>email</a></li>
+        <li><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></li>
+      </ul>
+    </div>
 
-  <div class="main-content">
-    <h1 class="all-caps">PLAY</h1>
-    <h2>
-      <span class="sketchbooks">view sketchbooks</span>
-      <a class='resume' href="https://www.sketchbookproject.com/library/15336" target="_blank">(1)</a>
-      <a class='resume' href="https://www.sketchbookproject.com/library/15290" target="_blank">(2)</a>
-      <a class='resume' href="https://www.sketchbookproject.com/library/15335" target="_blank">(3)</a>
-    </h2>
-    <h2 class="sketchbooks">view
-      <a class="resume" href='http://www.presentationpartynight.com/' target="_blank">PPN</a> presentations
-      <a class="resume pres" data-text-swap="(hide)">(show)</a>
-    </h2>
-    <div class='slide'>
-      <p>
-        Decision Making
-        <span class='align-presentation1'>
-          <a class='nav' href="images/presentations/ppn-decision.pdf" target="_blank">deck</a>
-          /
-          <a class='nav' href="decisions.html" target="_blank">notes</a>
-        </span>
-      </p>
-      <p>
-        Carrie Nation
-        <span class='align-presentation2'>
-          <a class='nav' href="images/presentations/ppn-prohibition.pdf" target="_blank">deck</a>
-          /
-          <a class='nav' href="carrie.html" target="_blank">notes</a>
-        </span>
-      </p>
-      <p>
-        Moral Dilemmas
-        <span class='align-presentation3'>
-          <a class='nav' href="images/presentations/ppn-dilemmas.pdf" target="_blank">deck</a>
-          /
-          <a class='nav' href="dilemmas.html" target="_blank">notes</a><br>
-        </span>
-      </p>
-    </div>
-    <div class='bump'></div>
-    <br>
-    <div class='grid'>
-      <img src="images/play/ex1.jpg">
-      <img src="images/play/ex2.jpg">
-      <img src="images/play/ex3.jpg">
-      <img src="images/play/ex4.jpg">
-      <img src="images/play/ex5.jpg">
-      <img src="images/play/ex6.jpg">
-      <img src="images/play/ex7.jpg">
-      <img src="images/play/ex8.jpg">
-      <img src="images/play/ex9.jpg">
-      <img src="images/play/ex10.jpg">
-      <img src="images/play/img_3826.jpg">
-      <img src="images/play/img_3824.jpg">
-      <img src="images/play/img_7145.jpg">
-      <img src="images/play/img_7148.jpg">
-      <img src="images/play/img_7152.jpg">
-      <img src="images/play/img_7150.jpg">
-      <img src="images/play/img_7153.jpg">
-      <img src="images/play/img_7141.jpg">
-      <img src="images/play/img_7212.jpg">
-      <img src="images/play/img_7154.jpg">
-      <img src="images/play/img_7155.jpg">
-      <img src="images/play/img_7158.jpg">
-      <img src="images/play/img_7165.jpg">
-      <img src="images/play/img_7166.jpg">
-      <img src="images/play/img_7168.jpg">
-      <img src="images/play/img_7169.jpg">
-      <img src="images/play/img_7170.jpg">
-      <img src="images/play/img_7171.jpg">
-      <img src="images/play/img_7173.jpg">
-      <img src="images/play/img_7179.jpg">
-      <img src="images/play/img_7176.jpg">
-      <img src="images/play/img_7178.jpg">
-      <img src="images/play/img_7180.jpg">
-      <img src="images/play/img_7159.jpg">
-      <img src="images/play/img_7204.jpg">
-      <img src="images/play/img_7219.jpg">
-      <img src="images/play/img_7187.jpg">
-      <img src="images/play/img_7182.jpg">
-      <img src="images/play/img_7184.jpg">
-      <img src="images/play/img_7193.jpg">
-      <img src="images/play/img_7194.jpg">
-      <img src="images/play/img001.jpg">
-      <img src="images/play/img_7198.jpg">
-      <img src="images/play/img_7199.jpg">
-      <img src="images/play/img_7202.jpg">
-      <img src="images/play/img_7203.jpg">
-      <img src="images/play/img_7207.jpg">
-      <img src="images/play/img_7214.jpg">
-      <img src="images/play/img004.jpg">
-      <img src="images/play/img_7209.jpg">
-      <img src="images/play/img_7220.jpg">
-      <img src="images/play/img_7225.jpg">
-      <img src="images/play/img_7224.jpg">
-      <img src="images/play/img_7227.jpg">
-      <img src="images/play/img_7221.jpg">
-      <img src="images/play/img_7218.jpg">
-      <img src="images/play/img_7228.jpg">
-      <img src="images/play/img_7229.jpg">
-      <img src="images/play/img_7230.jpg">
-      <img src="images/play/img003.jpg">
-      <img src="images/play/img_7239.jpg">
-      <img src="images/play/img_7234.jpg">
-      <img src="images/play/img_7235.jpg">
-      <img src="images/play/img_7236.jpg">
-      <img src="images/play/img_7242.jpg">
-      <img src="images/play/img_7240.jpg">
-      <img src="images/play/img_7245.jpg">
-      <img src="images/play/img_7247.jpg">
-      <img src="images/play/img_7259.jpg">
-      <img src="images/play/img_7249.jpg">
-      <img src="images/play/img_7271.jpg">
-      <img src="images/play/img_7262.jpg">
-      <img src="images/play/img_7265.jpg">
-      <img src="images/play/img_7269.jpg">
-      <img src="images/play/img005.jpg">
-      <img src="images/play/img006.jpg">
-      <img src="images/play/img007.jpg">
-      <img src="images/play/terrible-clothing.jpg">
-      <img src="images/play/doodle002.jpg">
-      <img src="images/play/doodle003.jpg">
-      <img src="images/play/doodle011.jpg">
-      <img src="images/play/doodle015.jpg">
-      <img src="images/play/doodle016.jpg">
-      <img src="images/play/doodle018.jpg">
-      <img src="images/play/doodle019.jpg">
-      <img src="images/play/doodle020.jpg">
-      <img src="images/play/doodle021.jpg">
-      <img src="images/play/doodle023.jpg">
-      <img src="images/play/doodle025.jpg">
-      <img src="images/play/doodle026.jpg">
-      <img src="images/play/doodle030.jpg">
-      <img src="images/play/doodle032.jpg">
-      <img src="images/play/doodle034.jpg">
-      <img src="images/play/doodle036.jpg">
-      <img src="images/play/doodle039.jpg">
-    </div>
-    <div class="popup">
-      <span class='close all-caps'>CLOSE (X)</span>
-      <img class="large" src="">
-      <div class='explainer'></div>
-    </div>
-    <div class='shorten'><br><hr><br></div>
-    <p class='top'>top</p>
-    <footer>
-      <p>
-        <small>
+    <div class="main-content">
+      <h1 class="all-caps">PLAY</h1>
+      <h2>
+        <span class="sketchbooks">view sketchbooks</span>
+        <a class='resume' href="https://www.sketchbookproject.com/library/15336" target="_blank">(1)</a>
+        <a class='resume' href="https://www.sketchbookproject.com/library/15290" target="_blank">(2)</a>
+        <a class='resume' href="https://www.sketchbookproject.com/library/15335" target="_blank">(3)</a>
+      </h2>
+      <h2 class="sketchbooks">view
+        <a class="resume" href='http://www.presentationpartynight.com/' target="_blank">PPN</a> presentations
+        <a class="resume pres" data-text-swap="(hide)">(show)</a>
+      </h2>
+      <div class='slide'>
+        <p>
+          Decision Making
+          <span class='align-presentation1'>
+            <a class='nav' href="images/presentations/ppn-decision.pdf" target="_blank">deck</a>
+            /
+            <a class='nav' href="decisions.html" target="_blank">notes</a>
+          </span>
+        </p>
+        <p>
+          Carrie Nation
+          <span class='align-presentation2'>
+            <a class='nav' href="images/presentations/ppn-prohibition.pdf" target="_blank">deck</a>
+            /
+            <a class='nav' href="carrie.html" target="_blank">notes</a>
+          </span>
+        </p>
+        <p>
+          Moral Dilemmas
+          <span class='align-presentation3'>
+            <a class='nav' href="images/presentations/ppn-dilemmas.pdf" target="_blank">deck</a>
+            /
+            <a class='nav' href="dilemmas.html" target="_blank">notes</a><br>
+          </span>
+        </p>
+      </div>
+      <div class='bump'></div>
+      <br>
+      <div class="outer-video-container">
+        <div class='embed-container'>
+          <iframe src='https://player.vimeo.com/video/139133207' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div>
+      </div>
+      <br>
+      <div class='grid'>
+        <img src="images/play/ex1.jpg">
+        <img src="images/play/ex2.jpg">
+        <img src="images/play/ex3.jpg">
+        <img src="images/play/ex4.jpg">
+        <img src="images/play/ex5.jpg">
+        <img src="images/play/ex6.jpg">
+        <img src="images/play/ex7.jpg">
+        <img src="images/play/ex8.jpg">
+        <img src="images/play/ex9.jpg">
+        <img src="images/play/ex10.jpg">
+        <img src="images/play/img_3826.jpg">
+        <img src="images/play/img_3824.jpg">
+        <img src="images/play/img_7145.jpg">
+        <img src="images/play/img_7148.jpg">
+        <img src="images/play/img_7152.jpg">
+        <img src="images/play/img_7150.jpg">
+        <img src="images/play/img_7153.jpg">
+        <img src="images/play/img_7141.jpg">
+        <img src="images/play/img_7212.jpg">
+        <img src="images/play/img_7154.jpg">
+        <img src="images/play/img_7155.jpg">
+        <img src="images/play/img_7158.jpg">
+        <img src="images/play/img_7165.jpg">
+        <img src="images/play/img_7166.jpg">
+        <img src="images/play/img_7168.jpg">
+        <img src="images/play/img_7169.jpg">
+        <img src="images/play/img_7170.jpg">
+        <img src="images/play/img_7171.jpg">
+        <img src="images/play/img_7173.jpg">
+        <img src="images/play/img_7179.jpg">
+        <img src="images/play/img_7176.jpg">
+        <img src="images/play/img_7178.jpg">
+        <img src="images/play/img_7180.jpg">
+        <img src="images/play/img_7159.jpg">
+        <img src="images/play/img_7204.jpg">
+        <img src="images/play/img_7219.jpg">
+        <img src="images/play/img_7187.jpg">
+        <img src="images/play/img_7182.jpg">
+        <img src="images/play/img_7184.jpg">
+        <img src="images/play/img_7193.jpg">
+        <img src="images/play/img_7194.jpg">
+        <img src="images/play/img001.jpg">
+        <img src="images/play/img_7198.jpg">
+        <img src="images/play/img_7199.jpg">
+        <img src="images/play/img_7202.jpg">
+        <img src="images/play/img_7203.jpg">
+        <img src="images/play/img_7207.jpg">
+        <img src="images/play/img_7214.jpg">
+        <img src="images/play/img004.jpg">
+        <img src="images/play/img_7209.jpg">
+        <img src="images/play/img_7220.jpg">
+        <img src="images/play/img_7225.jpg">
+        <img src="images/play/img_7224.jpg">
+        <img src="images/play/img_7227.jpg">
+        <img src="images/play/img_7221.jpg">
+        <img src="images/play/img_7218.jpg">
+        <img src="images/play/img_7228.jpg">
+        <img src="images/play/img_7229.jpg">
+        <img src="images/play/img_7230.jpg">
+        <img src="images/play/img003.jpg">
+        <img src="images/play/img_7239.jpg">
+        <img src="images/play/img_7234.jpg">
+        <img src="images/play/img_7235.jpg">
+        <img src="images/play/img_7236.jpg">
+        <img src="images/play/img_7242.jpg">
+        <img src="images/play/img_7240.jpg">
+        <img src="images/play/img_7245.jpg">
+        <img src="images/play/img_7247.jpg">
+        <img src="images/play/img_7259.jpg">
+        <img src="images/play/img_7249.jpg">
+        <img src="images/play/img_7271.jpg">
+        <img src="images/play/img_7262.jpg">
+        <img src="images/play/img_7265.jpg">
+        <img src="images/play/img_7269.jpg">
+        <img src="images/play/img005.jpg">
+        <img src="images/play/img006.jpg">
+        <img src="images/play/img007.jpg">
+        <img src="images/play/terrible-clothing.jpg">
+        <img src="images/play/doodle002.jpg">
+        <img src="images/play/doodle003.jpg">
+        <img src="images/play/doodle011.jpg">
+        <img src="images/play/doodle015.jpg">
+        <img src="images/play/doodle016.jpg">
+        <img src="images/play/doodle018.jpg">
+        <img src="images/play/doodle019.jpg">
+        <img src="images/play/doodle020.jpg">
+        <img src="images/play/doodle021.jpg">
+        <img src="images/play/doodle023.jpg">
+        <img src="images/play/doodle025.jpg">
+        <img src="images/play/doodle026.jpg">
+        <img src="images/play/doodle030.jpg">
+        <img src="images/play/doodle032.jpg">
+        <img src="images/play/doodle034.jpg">
+        <img src="images/play/doodle036.jpg">
+        <img src="images/play/doodle039.jpg">
+      </div>
+      <div class="popup">
+        <span class='close all-caps'>CLOSE (X)</span>
+        <img class="large" src="">
+        <div class='explainer'></div>
+      </div>
+      <div class='shorten'><br><hr><br></div>
+      <p class='top'>top</p>
+      <footer>
+        <p>
+          <small>
             <span class='license'>
               All work is licensed under a
               <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
                 Creative Commons Attribution 4.0 International License.
               </a>
             </span><br>
-          Thanks for reading. Have a <a class='quote'>nice day.</a>
-          <span class='fade'>
-            &nbsp;&mdash;&nbsp;
-            <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
-          </span>
-        </small>
-      </p><br>
-    </footer>
-  </div>
+            Thanks for reading. Have a <a class='quote'>nice day.</a>
+            <span class='fade'>
+              &nbsp;&mdash;&nbsp;
+              <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
+            </span>
+          </small>
+        </p><br>
+      </footer>
+    </div>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-  <script src="javascripts/scripts.js"></script>
-</body>
-</html>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+    <script src="javascripts/scripts.js"></script>
+  </body>
+  </html>
 
 
