add new tour date

--- a/brewing-tour/tour.html
+++ b/brewing-tour/tour.html
@@ -53,6 +53,16 @@
 
   <div class="wrapper">
 
+    <h2>New Tour Date Scheduled!</h2>
+
+    <p>Announcing a new tour date! <strong>Thursday June 23, 2016</strong> at 7pm. It's the only one scheduled for right now so get your tickets while they last!</p>
+    
+    <p class="center-text">
+      <a href="https://www.eventbrite.com/e/landmark-bushwick-breuckelen-beer-june-23-tickets-25638446283" class="btn-temp" target="_blank">Buy Tickets</a>
+    </p>
+
+    <hr class="divider-line" />
+
     <p><span class="drop">W</span>elcome to <strong>A Brewing History of Bushwick</strong>. Believe it or not, the neighborhood of Bushwick, Brooklyn was once the beer brewing center of America. On this walking tour, we’ll look at some historic 19th-century landmark brewery buildings that are still standing. We’ll also make our way to <strong>Brewer’s Row</strong>, recounting the stories of the breweries, the beer, and the people that made Bushwick a thriving brewing powerhouse.</p>
 
     <p>And of course, we’ll end at a bar and enjoy a pint in the tradition of Bushwick’s once and future glory! The vibe is very informal and audience participation is encouraged. So come curious and come thirsty!</p>
@@ -61,13 +71,11 @@
 
     <img class="content" src="img/bbt-arion-hall.jpg" alt="Arion Hall">
 
-    <h2 class="subhead-text">Schedule</h2>
+    <h2 class="subhead-text">Tour Schedule</h2>
 
-    <p>This tour has been run through <a href="http://www.nych2o.org/" target="_blank">NYC H<sub>2</sub>0</a>, an awesome non-profit that educates New Yorkers about water, ecology, and the natural history of New York City. Although right now, we have no tours scheduled for the near future but...</p>
+    <p>This tour is run through <a href="http://www.nych2o.org/" target="_blank">NYC H<sub>2</sub>0</a>, an awesome non-profit that educates New Yorkers about water, ecology, and the natural history of New York City.</p>
 
-    <p>Once a year, it's also part of <a href="http://janeswalk.org/united-states/new-york-city-ny/brewing-history-bushwick/" target="_blank">Jane’s Walks</a>, a free event and annual weekend long festival every May of volunteer-led neighborhood walking tours.</p>
-
-    <p>So mark your calendars for next year!</p>
+    <p>The full tour schedule isn't established yet but we hope to do it about once a month as long as weather permits.</p>
 
     <h2 class="subhead-text">Tour Photos</h2>
 
