brewing tour updates

--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -206,13 +206,15 @@
     <img class="content historical" src="img/Chas-Schaefer-Corp-and-Otto-Huber-trucks.jpg" alt="Chas Schaefer Corp and Otto Huber trucks">
     <p class="caption-title">Chas. Schaefer Corp. and Otto Huber trucks</p>
 
-    <img class="content historical" src="img/Huber-Hittleman-Brewery.jpg" alt="Huber Hittleman Brewery ad">
-    <p class="caption-title">Huber Hittleman Brewery ad</p>
-    <p class="caption-text">Meserole Street from Bushwick Avenue to Waterbury Street</p>
-
     <img class="content historical" src="img/Huber-Hittleman-Brewery-ad.jpg" alt="Huber Hittleman Brewery ad">
     <p class="caption-title">Huber Hittleman Brewery ad</p>
+
+    <img class="content historical" src="img/Huber-Hittleman-Brewery-3d.jpg" alt="Huber Hittleman Brewery complex">
+    <p class="caption-title">Huber Hittleman Brewery complex</p>
     <p class="caption-text">Meserole Street from Bushwick Avenue to Waterbury Street</p>
+
+    <img class="content historical" src="img/Huber-Hittleman-Brewery.jpg" alt="Huber Hittleman Brewery ad">
+    <p class="caption-title">Huber Hittleman Brewery ad</p>
 
     <img class="content historical" src="img/Huber-Hittleman-Brewery-1.jpg" alt="Huber Hittleman Brewery">
     <p class="caption-title">Huber Hittleman Brewery</p>
@@ -221,7 +223,7 @@
     <p class="caption-title">Huber Hittleman Brewery</p>
 
     <img class="content historical" src="img/brewery-merch.jpg" alt="brewery merch">
-    <p class="caption-title">Schafer and Rheingold merch!</p>
+    <p class="caption-title">Schafer and Rheingold flea market finds!</p>
 
     <h3><a href="#" class="scrollup"><i class="fa fa-arrow-up fa-3x" aria-hidden="true"></i></a></h3>
 
