--- a/brewing-tour/tour.html
+++ b/brewing-tour/tour.html
@@ -58,7 +58,7 @@
     <p>Announcing a new tour date! <strong>Thursday June 23, 2016</strong> at 7pm. It's the only one scheduled for right now so get your tickets while they last!</p>
     
     <p class="center-text">
-      <a href="https://www.eventbrite.com/e/landmark-bushwick-breuckelen-beer-june-23-tickets-25638446283" class="btn-temp" target="_blank">Buy Tickets</a>
+      <button onclick=window.open('https://www.eventbrite.com/e/landmark-bushwick-breuckelen-beer-june-23-tickets-25638446283') class="btn-5 icon-beer"><span>Buy Tickets</span></button>
     </p>
 
     <hr class="divider-line" />
