--- a/brewing-tour/index.html
+++ b/brewing-tour/index.html
@@ -4,11 +4,13 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Bushwick Brewing Tour | #BBT</title>
-  <meta name="description" content="">
+  <meta name="description" content="A Brewing History of Bushwick is a walking tour recounting the stories of Bushwick when it was a thriving brewing powerhouse.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta http-equiv="cleartype" content="on">
   <meta property="og:image" content="img/bbt-william-ulmer-brewery.jpg" />
+
+  <link rel="image_src" href="img/bbt-william-ulmer-brewery.jpg" />
 
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
