--- a/brewing-tour/index.html
+++ b/brewing-tour/index.html
@@ -4,12 +4,13 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Bushwick Brewing Tour | #BBT</title>
-  <meta name="description" content="A Brewing History of Bushwick is a walking tour recounting the stories of Bushwick when it was a thriving brewing powerhouse.">
-
+  
+  <meta property="og:site_name" content="Bushwick Brewing Tour | #BBT" />
   <meta property="og:title" content="Bushwick Brewing Tour | #BBT" />
+  <meta property="og:description" content="A Brewing History of Bushwick is a walking tour recounting the stories of Bushwick when it was a thriving brewing powerhouse.">
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://www.bushwickbrewingtour.com/" />
-  <meta property="og:image" content="img/bbt-william-ulmer-brewery.jpg" />
+  <meta property="og:image" content="http://bushwickbrewingtour.com/img/bbt-william-ulmer-brewery.jpg" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="cleartype" content="on">
