--- a/brewing-tour/index.html
+++ b/brewing-tour/index.html
@@ -6,7 +6,7 @@
   <title>Bushwick Brewing Tour | #BBT</title>
   
   <meta property="og:site_name" content="Bushwick Brewing Tour | #BBT" />
-  <meta property="og:title" content="Bushwick Brewing Tour | #BBT" />
+  <meta property="og:title" type="string" content="Bushwick Brewing Tour | #BBT" />
   <meta property="og:description" content="A Brewing History of Bushwick is a walking tour recounting the stories of Bushwick when it was a thriving brewing powerhouse.">
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://www.bushwickbrewingtour.com/" />
