--- a/brewing-tour/index.html
+++ b/brewing-tour/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" type="string" content="Bushwick Brewing Tour | #BBT" />
   <meta property="og:description" type="string" content="A Brewing History of Bushwick is a walking tour recounting the stories of Bushwick when it was a thriving brewing powerhouse.">
   <meta property="og:type" type="string" content="website" />
-  <meta property="og:url" type="string" content="http://www.bushwickbrewingtour.com/index.html" />
+  <meta property="og:url" type="string" content="http://www.chrisheuberger.com/brewing-tour" />
   <meta property="og:image" type="string" content="http://bushwickbrewingtour.com/img/bbt-william-ulmer-brewery.jpg" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
