--- a/404.html
+++ b/404.html
@@ -27,14 +27,52 @@
           margin: 0;
           padding: 0;
           border: 0;
-          font: inherit;
           vertical-align: baseline;
         }
-
 
         ::selection {
           background: #b3d4fc;
           text-shadow: none;
+        }
+
+        .broken-container {
+          width: 60%;
+          margin: 5% auto;
+        }
+
+        .broken-header {
+          font-size: 50px;
+        }
+
+        p.broken-float {
+          float: left;
+          padding-top: 20px;
+        }
+
+        .broken-text {
+          font-size: 26px;
+          margin: 1em 0;
+        }
+
+        a.broken-link {
+          color: #001f3f;
+          font-weight: 400;
+          text-decoration: none;
+        }
+
+        a.broken-link:hover {
+          color: #0074D9;
+          text-decoration: underline;
+        }
+
+        span {
+          color: aqua;
+        }
+
+        .broken-pic {
+          width: 50%;
+          float: left;
+          margin-left: -50px;
         }
 
       </style>
