--- a/404.html
+++ b/404.html
@@ -30,6 +30,13 @@
           vertical-align: baseline;
         }
 
+        body {
+          margin-top: 10px;
+          font: 1em/1.5 'Ropa Sans', "Helvetica Neue", Helvetica, sans-serif;
+          color: gray;
+          font-weight: 300;
+        }
+
         ::selection {
           background: #b3d4fc;
           text-shadow: none;
@@ -82,7 +89,6 @@
       <div class="broken-container">
         <h1 class="broken-header">Uh-oh! <span>Four oh four.</span></h1>
         <p class="broken-text">Sorry, but the page you're trying to view doesn't exist.</p>
-        <img class="broken-pic" src="images/sweater.png" alt="">
         <p class="broken-float"><a class="broken-link" href="index.html">Go to the homepage ></a></p>
       </div>
     </body>
