--- a/404.html
+++ b/404.html
@@ -37,6 +37,13 @@
           font-weight: 300;
         }
 
+        h1, h2, h3, h4, h5, h6 {
+          font-weight: 300;
+          color: #222;
+          margin: 0;
+          padding: 0;
+        }
+
         ::selection {
           background: #b3d4fc;
           text-shadow: none;
