--- a/404.html
+++ b/404.html
@@ -33,6 +33,7 @@
         body {
           margin-top: 10px;
           font: 1em/1.5 'Ropa Sans', "Helvetica Neue", Helvetica, sans-serif;
+          color: gray;
           font-weight: 300;
         }
 
