add cemetery images

--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -91,9 +91,17 @@
     <p class="caption-title">Theobald Mark Engelhardt (1851–1935)</p>
     <p class="caption-text">One of Brooklyn’s most prolific architects and designer of many iconic buildings such as The William Ulmer Brewery complex, Arion Hall, Northside Savings Bank, and Eberhard Faber Pencil Factory.</p>
     
-    <img class="content historical" src="img/Lipsius-Cook-House.jpg" alt="Lipsius Cook House">
-    <p class="caption-title">Lipsius Cook House</p>
-    <p class="caption-text">670 Bushwick Avenue at Willoughby Avenue</p>
+    <img class="content historical" src="img/Lipsius-Cook-House.jpg" alt="Lipsius Cook Mansion">
+    <p class="caption-title">Lipsius Cook Mansion (670 Bushwick Avenue at Willoughby Avenue)</p>
+    <p class="caption-text">Designed by Theobald Engelhardt and built in 1889 as the home of Henry Claus and his wife, Catherina Lipsius. They sold the home in 1902 to Dr. Frederick Cook (not to be confused with the 18th century British explorer James Cook), a physician and arctic explorer who claimed to be the first man to reach the summit of Alaska’s Denali (formerly Mount McKinley) in 1906. He later claimed he was the first man to reach the North Pole in 1908, contradicting Robert Peary’s claim that he was the first, and triggering a widely publicized dispute. Both of Cook's claims were eventually discredited. He later served 7 years in prison for stock fraud. The house was sold to an Italian family in 1920, then became a convent, then a doctor's clinic, then abandoned, and now has new owners.</p>
+
+    <img class="content historical" src="img/lipsius-monument.jpg" alt="Lipsius Cook Mansion">
+    <p class="caption-title">Lipsius Claus Monument</p>
+    <p class="caption-text">In Evergreens Cemetery, steps from the original Trommer's Evergreen Brewery and Restaurant is this monument dedicated to Henry Claus and his wife, Catherina Lipsius, as in the Claus-Lipsius Brewing Co. (1889–1904) located at 471 Bushwick Ave & Forrest St / 493 Bushwick Ave.</p>
+
+    <img class="content historical" src="img/baldwin-monument.jpg" alt="Baldwin Monument">
+    <p class="caption-title">Lipsius Claus Monument</p>
+    <p class="caption-text">Also in Evergreens Cemetery, is this monument of Capt. William Baldwin, the first firefighter in Brooklyn to die in the line of duty. He was helping put out a fire at the Otto Huber Brewery on Jan 14, 1880.</p>
 
     <img class="content historical" src="img/Rheingold-ad.jpg" alt="Rheingold ad">
     <p class="caption-title">Miss Rheingold ad</p>
