--- a/brewing-tour/images.html
+++ b/brewing-tour/images.html
@@ -95,13 +95,27 @@
     <p class="caption-title">Lipsius Cook Mansion (670 Bushwick Avenue at Willoughby Avenue)</p>
     <p class="caption-text">Designed by Theobald Engelhardt and built in 1889 as the home of Henry Claus and his wife, Catherina Lipsius. They sold the home in 1902 to Dr. Frederick Cook (not to be confused with the 18th century British explorer James Cook), a physician and arctic explorer who claimed to be the first man to reach the summit of Alaska’s Denali (formerly Mount McKinley) in 1906. He later claimed he was the first man to reach the North Pole in 1908, contradicting Robert Peary’s claim that he was the first, and triggering a widely publicized dispute. Both of Cook's claims were eventually discredited. He later served 7 years in prison for stock fraud. The house was sold to an Italian family in 1920, then became a convent, then a doctor's clinic, then abandoned, and now has new owners.</p>
 
-    <img class="content historical" src="img/lipsius-monument.jpg" alt="Lipsius Cook Mansion">
+    <img class="content historical" src="img/lipsius-monument.jpg" alt="Lipsius Cook Monument">
     <p class="caption-title">Lipsius Claus Monument</p>
     <p class="caption-text">In Evergreens Cemetery, steps from the original Trommer's Evergreen Brewery and Restaurant is this monument dedicated to Henry Claus and his wife, Catherina Lipsius, as in the Claus-Lipsius Brewing Co. (1889–1904) located at 471 Bushwick Ave & Forrest St / 493 Bushwick Ave.</p>
 
     <img class="content historical" src="img/baldwin-monument.jpg" alt="Baldwin Monument">
-    <p class="caption-title">Lipsius Claus Monument</p>
+    <p class="caption-title">William Baldwin Monument</p>
     <p class="caption-text">Also in Evergreens Cemetery, is this monument of Capt. William Baldwin, the first firefighter in Brooklyn to die in the line of duty. He was helping put out a fire at the Otto Huber Brewery on Jan 14, 1880.</p>
+
+    <img class="content historical" src="img/ridgewood-reservoir.jpg" alt="Ridgewood Reservoir">
+    <p class="caption-title">Ridgewood Reservoir lithograph, 1859</p>
+    <p class="caption-text"><em>View of Brooklyn City Water Works and Cypress Hills from Ridgewood Reservoir</em> by Frederick Blummer and Gustav Kraetzer, an East New York publisher/lithographer</p>
+
+    <img class="content historical" src="img/FrankLeslie-Illustrated-Newspaper-1865-baseball.jpg" alt="Baseball in Bushwick">
+    <p class="caption-title">Baseball in Bushwick</p>
+    <p class="caption-text">A spread from <em>Frank Leslie's Illustrated Newspaper</em>, November 4, 1865. Deceased star player Jim Creighton is shrouded at the top. On the right, newspaper mastheads and a portrait of Henry Chadwick pay homage to sportswriters. On the field, the Atlantics beat the Eckfords in the world's championship, 38 to 8.</p>
+
+    <p class="caption-text">The illustration's caption reads: "Great base ball match between the Atlantic and Eckford Clubs of Brooklyn, at the Union Base Ball Grounds, Brooklyn, E. D. Oct 13, with portraits of the leading players of the principle clubs of New York, Brooklyn and Newark."</p>
+
+    <p class="caption-text">The Union Grounds were built in 1862 on the outskirts of the nearby town of Wallabout, at today's Marcy Ave & Lynch St. It was the first to fence in the playing field and charge spectators.</p>
+
+    <p class="caption-text">Chadwick lived in Brooklyn and came to be known as the "Father of Baseball." He is credited with creating the statistics of batting average and earned run average (ERA) as well as box scores and the abbreviation "K" that designates a strikeout.</p>
 
     <img class="content historical" src="img/Rheingold-ad.jpg" alt="Rheingold ad">
     <p class="caption-title">Miss Rheingold ad</p>
