--- a/brewing-tour/index.html
+++ b/brewing-tour/index.html
@@ -7,19 +7,21 @@
   
   <!-- Open Graph data -->
   <meta property="og:site_name" content="Bushwick Brewing Tour">
-  <meta property="og:title" content="Bushwick Brewing Tour" />
-  <meta property="og:url" content="http://www.bushwickbrewingtour.com" />
-  <meta property="og:type" content="website" />
-  <meta property="og:description" content="A Brewing History of Bushwick is a walking tour recounting the stories of Bushwick when it was a thriving brewing powerhouse." />
-  <meta property="og:image" content="http://www.bushwickbrewingtour.com/img/social-fb.png" />
+  <meta property="og:title" content="Bushwick Brewing Tour">
+  <meta property="og:url" content="http://www.bushwickbrewingtour.com">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="A Brewing History of Bushwick is a walking tour recounting the stories of Bushwick when it was a thriving brewing powerhouse.">
+  <meta property="og:image" content="http://www.bushwickbrewingtour.com/img/social-fb.png">
 
   <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Bushwick Brewing Tour" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@chrisbup">
+  <meta name="twitter:creator" content="@chrisbup">
+  <meta name="twitter:url" content="http://www.bushwickbrewingtour.com">
+  <meta name="twitter:image" content="http://www.bushwickbrewingtour.com/img/social-tw.png">
+  <meta name="twitter:title" content="Bushwick Brewing Tour">
   <meta name="twitter:description" content="A Brewing History of Bushwick is a walking tour recounting the stories of Bushwick when it was a thriving brewing powerhouse." />
-  <meta name="twitter:url" content="http://www.bushwickbrewingtour.com" />
-  <meta name="twitter:image" content="http://www.bushwickbrewingtour.com/img/social-tw.png" />
-
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="cleartype" content="on">
 
