--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
           <li>life issue: climate change</li>
           <li>guilty pleasure: showtunes</li>
           <li>proud accomplishment: I’ve run two marathons.</li>
-          <li>embarassing secret: I own three fannie packs.</li>
+          <li>embarassing secret: I own three fanny packs.</li>
           <li>fascination: behavioral economics</li>
           <li>hidden talent: I can recite Hamlet's big soliloquy.</li>
           <li>odd habit: I keep diligent lists of good catch phrases, band names, and t-shirt ideas.</li>
